--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -28,6 +28,11 @@
         "\n",
         "\n",
         "  2. Read the introduction. What is the \"tidy data standard\" intended to accomplish?\n",
+        "\n",
+        "\n",
+        "> The \"tidy data standard\" is intended to simplify the initial cleaning of data so that you can use one simple procedure each time you encounter a new dataset, helping you spend less time on figuring out how to clean your data and more time actually interepreting and transforming it.\n",
+        "\n",
+        "\n",
         "  3. Read the intro to section 2. What does this sentence mean: \"Like families, tidy datasets are all alike but every messy dataset is messy in its own way.\" What does this sentence mean: \"For a given dataset, it’s usually easy to figure out what are observations and what are variables, but it is surprisingly difficult to precisely define variables and observations in general.\"\n",
         "  4. Read Section 2.2. How does Wickham define values, variables, and observations?\n",
         "  5. How is \"Tidy Data\" defined in section 2.3?\n",
