--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -34,6 +34,11 @@
         "\n",
         "\n",
         "  3. Read the intro to section 2. What does this sentence mean: \"Like families, tidy datasets are all alike but every messy dataset is messy in its own way.\" What does this sentence mean: \"For a given dataset, it’s usually easy to figure out what are observations and what are variables, but it is surprisingly difficult to precisely define variables and observations in general.\"\n",
+        "\n",
+        "\n",
+        "> The first sentence means that all tidied datasets are similar in that they all follow the same format (columns to variables, rows to observations, etc.). The second sentence means that it's easy to define which things are observations and which are variables (based on 2.2, which says that \"...it is easier to describe functional relationships between variables, and easier to make comparisons between groups of observations\"(Tidy Data, pg. 4)) - the second clause means that it's harder to come up with a general definition for these terms because the first method of reasoning relies on looking at whatever dataset you're working with and then making your decision from there.\n",
+        "\n",
+        "\n",
         "  4. Read Section 2.2. How does Wickham define values, variables, and observations?\n",
         "  5. How is \"Tidy Data\" defined in section 2.3?\n",
         "  6. Read the intro to Section 3 and Section 3.1. What are the 5 most common problems with messy datasets? Why are the data in Table 4 messy? What is \"melting\" a dataset?\n",
