--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -40,6 +40,11 @@
         "\n",
         "\n",
         "  4. Read Section 2.2. How does Wickham define values, variables, and observations?\n",
+        "\n",
+        "\n",
+        "> As defined here, values are (typically) individual numbers or strings, variables contain all values that correspond to the same underlying unit across all observations, while observations are made up of all the values measured for a particular unit across all the variables.\n",
+        "\n",
+        "\n",
         "  5. How is \"Tidy Data\" defined in section 2.3?\n",
         "  6. Read the intro to Section 3 and Section 3.1. What are the 5 most common problems with messy datasets? Why are the data in Table 4 messy? What is \"melting\" a dataset?\n",
         "  7. Why, specifically, is table 11 messy but table 12 tidy and \"molten\"?\n",
