--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -46,7 +46,17 @@
         "\n",
         "\n",
         "  5. How is \"Tidy Data\" defined in section 2.3?\n",
+        "\n",
+        "\n",
+        "> \"Tidy Data\" is defined here as data in which every variable forms a column, every observation forms a row, and each type of observational unit forms a table.\n",
+        "\n",
+        "\n",
         "  6. Read the intro to Section 3 and Section 3.1. What are the 5 most common problems with messy datasets? Why are the data in Table 4 messy? What is \"melting\" a dataset?\n",
+        "\n",
+        "\n",
+        "> The five most common problems with messy datasets are column headers being values instead of variable names, multiple variables being stored in one column, variables being stored in both rows and columns, multiple types of observational units being stored in one table, and a single observational unit being distributed among multiple tables. The data in table 4 is messy because one variable (income) is distributed among multiple columns. \"Melting\" a dataset is defined here as turning columns into rows by \"stacking\" the data - for example, the columns here (the income levels) are \"melted\" down into one variable - \"Income\", with the individual observations becoming their own values attached to each religion and frequency.\n",
+        "\n",
+        "\n",
         "  7. Why, specifically, is table 11 messy but table 12 tidy and \"molten\"?\n",
         "  8. Read Section 6. What is the \"chicken-and-egg\" problem with focusing on tidy data? What does Wickham hope happens in the future with further work on the subject of data wrangling?"
       ]
