--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -54,11 +54,20 @@
         "  6. Read the intro to Section 3 and Section 3.1. What are the 5 most common problems with messy datasets? Why are the data in Table 4 messy? What is \"melting\" a dataset?\n",
         "\n",
         "\n",
-        "> The five most common problems with messy datasets are column headers being values instead of variable names, multiple variables being stored in one column, variables being stored in both rows and columns, multiple types of observational units being stored in one table, and a single observational unit being distributed among multiple tables. The data in table 4 is messy because one variable (income) is distributed among multiple columns. \"Melting\" a dataset is defined here as turning columns into rows by \"stacking\" the data - for example, the columns here (the income levels) are \"melted\" down into one variable - \"Income\", with the individual observations becoming their own values attached to each religion and frequency.\n",
+        "> The five most common problems with messy datasets are column headers being values instead of variable names, multiple variables being stored in one column, variables being stored in both rows and columns, multiple types of observational units being stored in one table, and a single observational unit being distributed among multiple tables. The data in table 4 is messy because one variable (income) is distributed among multiple columns, i.e. that the column headers are values (of income) instead of variable names. \"Melting\" a dataset is defined here as turning columns into rows by \"stacking\" the data - for example, the columns here (the income levels) are \"melted\" down into one variable - \"Income\", with the individual observations becoming their own values attached to each religion and frequency.\n",
         "\n",
         "\n",
         "  7. Why, specifically, is table 11 messy but table 12 tidy and \"molten\"?\n",
-        "  8. Read Section 6. What is the \"chicken-and-egg\" problem with focusing on tidy data? What does Wickham hope happens in the future with further work on the subject of data wrangling?"
+        "\n",
+        "\n",
+        "> Table 11 is messy because the variables in it are stored in both rows and columns - for example, what could go into a potential \"date\" variable is spread out among multiple columns (d1, d2, d3, etc.), while \"tmax\" and \"tmin\" should each have their own column but are instead stored in the rows. Table 12(a), on the other hand, is molten because it has consolidated the \"day\" variable into one column under date, while 12(b) goes further to tidy the data by giving \"tmax\" and \"tmin\" their own columns, as mentioned before.\n",
+        "\n",
+        "\n",
+        "  8. Read Section 6. What is the \"chicken-and-egg\" problem with focusing on tidy data? What does Wickham hope happens in the future with further work on the subject of data wrangling?\n",
+        "\n",
+        "\n",
+        "> The \"chicken-and-egg\" problem mentioned here is that \"if tidy data is only as useful as the tools that work with it, then tidy tools will inextricably be linked to tidy data\" (Tidy Data, pg. 20). The author hopes that, in the future, other common challenges such as dealing with typos, identifying missing values, and correcting character encodings can be overcome through further development of frameworks like data tidying.\n",
+        "\n"
       ]
     },
     {
