--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -85,6 +85,47 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "url1 = \"https://raw.githubusercontent.com/3agleman/assignment2/main/data/airbnb_hw.csv\"\n",
+        "airbnb = pd.read_csv(url1)\n",
+        "\n",
+        "url2 = \"https://raw.githubusercontent.com/3agleman/assignment2/main/data/sharks.csv\"\n",
+        "sharks = pd.read_csv(url2)\n",
+        "\n",
+        "url3 = \"https://raw.githubusercontent.com/3agleman/EDA/main/data/pretrial_data.csv\"\n",
+        "pretrial = pd.read_csv(url3)\n",
+        "\n",
+        "# Q2.1\n",
+        "\n",
+        "# Q2.2\n",
+        "\n",
+        "# Q2.3\n",
+        "\n",
+        "# Q2.4"
+      ],
+      "metadata": {
+        "id": "51MxB04v97JP",
+        "outputId": "0d04b639-3c9f-44cd-be00-358cc6702f14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "51MxB04v97JP",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-8-cf984f379531>:6: DtypeWarning: Columns (10,17,18,19,20,21,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "  sharks = pd.read_csv(url2)\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "c11bcd96-2834-41a4-80fe-d354b4277fd9",
       "metadata": {
@@ -164,6 +205,18 @@
         "7. A tax system is progressive if higher-income and wealthier individuals pay more than lower-income and less wealthy individuals, and it is regressive if the opposite is true. Is the U.S. tax system progressive in terms of amount paid? In terms of the percentage of the overall total?\n",
         "8. Do the rich pay enough in taxes? Defend your answer."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SOURCES USED\n",
+        "\n",
+        "https://www.geeksforgeeks.org/ways-to-import-csv-files-in-google-colab/#"
+      ],
+      "metadata": {
+        "id": "nBvwCHbUArp3"
+      },
+      "id": "nBvwCHbUArp3"
     }
   ],
   "metadata": {
