--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -79,6 +79,11 @@
       "source": [
         "**Q2.** This question provides some practice cleaning variables which have common problems.\n",
         "1. Numeric variable: For `./data/airbnb_hw.csv`, clean the `Price` variable as well as you can, and explain the choices you make. How many missing values do you end up with? (Hint: What happens to the formatting when a price goes over 999 dollars, say from 675 to 1,112?)\n",
+        "\n",
+        "\n",
+        "> For this variable, I just decided to remove the commas in numbers over 1000 for greater consistency and ease of use. I also converted the resulting strings to integers.\n",
+        "\n",
+        "\n",
         "2. Categorical variable: For the `./data/sharks.csv` data covered in the lecture, clean the \"Type\" variable as well as you can, and explain the choices you make.\n",
         "3. Dummy variable: For the pretrial data covered in the lecture, clean the `WhetherDefendantWasReleasedPretrial` variable as well as you can, and, in particular, replace missing values with `np.nan`.\n",
         "4. Missing values, not at random: For the pretrial data covered in the lecture, clean the `ImposedSentenceAllChargeInContactEvent` variable as well as you can, and explain the choices you make. (Hint: Look at the `SentenceTypeAllChargesAtConvictionInContactEvent` variable.)"
@@ -92,12 +97,14 @@
         "airbnb = pd.read_csv(url1)\n",
         "\n",
         "url2 = \"https://raw.githubusercontent.com/3agleman/assignment2/main/data/sharks.csv\"\n",
-        "sharks = pd.read_csv(url2)\n",
+        "sharks = pd.read_csv(url2, low_memory = False)\n",
         "\n",
         "url3 = \"https://raw.githubusercontent.com/3agleman/EDA/main/data/pretrial_data.csv\"\n",
         "pretrial = pd.read_csv(url3)\n",
         "\n",
         "# Q2.1\n",
+        "airbnb['Price'] = airbnb['Price'].str.replace(\",\",\"\")\n",
+        "airbnb['Price'] = pd.to_numeric(airbnb['Price'], errors = 'coerce')\n",
         "\n",
         "# Q2.2\n",
         "\n",
@@ -106,24 +113,11 @@
         "# Q2.4"
       ],
       "metadata": {
-        "id": "51MxB04v97JP",
-        "outputId": "0d04b639-3c9f-44cd-be00-358cc6702f14",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "51MxB04v97JP"
       },
       "id": "51MxB04v97JP",
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-8-cf984f379531>:6: DtypeWarning: Columns (10,17,18,19,20,21,24) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  sharks = pd.read_csv(url2)\n"
-          ]
-        }
-      ]
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
