--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -85,6 +85,11 @@
         "\n",
         "\n",
         "2. Categorical variable: For the `./data/sharks.csv` data covered in the lecture, clean the \"Type\" variable as well as you can, and explain the choices you make.\n",
+        "\n",
+        "\n",
+        "> First I replaced all the blank values with nan. After that, I checked the unique values, and decided to switch every unique incident description (e.g. \"Watercraft\" or \"Sea Disaster\") to \"Unverified\", since it isn't obvious whether the attacks were provoked or not. Finally, I changed all instances of \"Boatomg\" to \"Invalid\" for spelling.\n",
+        "\n",
+        "\n",
         "3. Dummy variable: For the pretrial data covered in the lecture, clean the `WhetherDefendantWasReleasedPretrial` variable as well as you can, and, in particular, replace missing values with `np.nan`.\n",
         "4. Missing values, not at random: For the pretrial data covered in the lecture, clean the `ImposedSentenceAllChargeInContactEvent` variable as well as you can, and explain the choices you make. (Hint: Look at the `SentenceTypeAllChargesAtConvictionInContactEvent` variable.)"
       ]
@@ -93,6 +98,7 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
+        "import numpy as np\n",
         "url1 = \"https://raw.githubusercontent.com/3agleman/assignment2/main/data/airbnb_hw.csv\"\n",
         "airbnb = pd.read_csv(url1)\n",
         "\n",
@@ -107,6 +113,15 @@
         "airbnb['Price'] = pd.to_numeric(airbnb['Price'], errors = 'coerce')\n",
         "\n",
         "# Q2.2\n",
+        "sharks['Type'] = sharks['Type'].replace(\"\",np.nan)\n",
+        "# print(sharks['Type'].unique(), \"\\n\")\n",
+        "sharks['Type'] = sharks['Type'].replace(\"Watercraft\", \"Unverified\")\n",
+        "sharks['Type'] = sharks['Type'].replace(\"Unconfirmed\", \"Unverified\")\n",
+        "sharks['Type'] = sharks['Type'].replace(\"Boating\", \"Unverified\")\n",
+        "sharks['Type'] = sharks['Type'].replace(\"Sea Disaster\", \"Unverified\")\n",
+        "sharks['Type'] = sharks['Type'].replace(\"Boat\", \"Unverified\")\n",
+        "sharks['Type'] = sharks['Type'].replace(\"Boatomg\", \"Invalid\")\n",
+        "# print(sharks['Type'].unique(), \"\\n\")\n",
         "\n",
         "# Q2.3\n",
         "\n",
@@ -116,7 +131,7 @@
         "id": "51MxB04v97JP"
       },
       "id": "51MxB04v97JP",
-      "execution_count": 14,
+      "execution_count": 23,
       "outputs": []
     },
     {
