--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -91,7 +91,13 @@
         "\n",
         "\n",
         "3. Dummy variable: For the pretrial data covered in the lecture, clean the `WhetherDefendantWasReleasedPretrial` variable as well as you can, and, in particular, replace missing values with `np.nan`.\n",
-        "4. Missing values, not at random: For the pretrial data covered in the lecture, clean the `ImposedSentenceAllChargeInContactEvent` variable as well as you can, and explain the choices you make. (Hint: Look at the `SentenceTypeAllChargesAtConvictionInContactEvent` variable.)"
+        "\n",
+        "\n",
+        "4. Missing values, not at random: For the pretrial data covered in the lecture, clean the `ImposedSentenceAllChargeInContactEvent` variable as well as you can, and explain the choices you make. (Hint: Look at the `SentenceTypeAllChargesAtConvictionInContactEvent` variable.)\n",
+        "\n",
+        "\n",
+        "> I replaced the blank spaced with \"nan\", and then converted all the value to numerics for ease of use.\n",
+        "\n"
       ]
     },
     {
@@ -99,14 +105,17 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
+        "import io\n",
         "url1 = \"https://raw.githubusercontent.com/3agleman/assignment2/main/data/airbnb_hw.csv\"\n",
         "airbnb = pd.read_csv(url1)\n",
         "\n",
         "url2 = \"https://raw.githubusercontent.com/3agleman/assignment2/main/data/sharks.csv\"\n",
         "sharks = pd.read_csv(url2, low_memory = False)\n",
         "\n",
-        "url3 = \"https://raw.githubusercontent.com/3agleman/EDA/main/data/pretrial_data.csv\"\n",
-        "pretrial = pd.read_csv(url3)\n",
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')\n",
+        "\n",
+        "pretrial = pd.read_csv('/content/drive/My Drive/VirginiaPretrialData2017.csv', low_memory = False)\n",
         "\n",
         "# Q2.1\n",
         "airbnb['Price'] = airbnb['Price'].str.replace(\",\",\"\")\n",
@@ -124,15 +133,38 @@
         "# print(sharks['Type'].unique(), \"\\n\")\n",
         "\n",
         "# Q2.3\n",
+        "#print(pretrial['WhetherDefendantWasReleasedPretrial'].unique(), \"\\n\")\n",
+        "pretrial['WhetherDefendantWasReleasedPretrial'] = pretrial['WhetherDefendantWasReleasedPretrial'].replace(\"\",np.nan)\n",
+        "#print(pretrial['WhetherDefendantWasReleasedPretrial'].unique(), \"\\n\")\n",
+        "pretrial['WhetherDefendantWasReleasedPretrial'] = pretrial['WhetherDefendantWasReleasedPretrial'].replace(9, np.nan)\n",
+        "#print(pretrial['WhetherDefendantWasReleasedPretrial'].unique(), \"\\n\")\n",
+        "#print(pretrial['WhetherDefendantWasReleasedPretrial'])\n",
         "\n",
-        "# Q2.4"
+        "# Q2.4\n",
+        "#print(pretrial['ImposedSentenceAllChargeInContactEvent'].unique())\n",
+        "pretrial['ImposedSentenceAllChargeInContactEvent'] = pretrial['ImposedSentenceAllChargeInContactEvent'].replace(' ', np.nan)\n",
+        "pretrial['ImposedSentenceAllChargeInContactEvent'] = pd.to_numeric(pretrial['ImposedSentenceAllChargeInContactEvent'], errors = 'coerce')\n",
+        "#print(pretrial['ImposedSentenceAllChargeInContactEvent'].unique())\n",
+        "#print(pretrial['SentenceTypeAllChargesAtConvictionInContactEvent'].unique())"
       ],
       "metadata": {
-        "id": "51MxB04v97JP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "51MxB04v97JP",
+        "outputId": "20394ad3-f2b0-4dd4-b18e-546c052e0afa"
       },
       "id": "51MxB04v97JP",
-      "execution_count": 23,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[9 0 1 4 2]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -220,7 +252,9 @@
       "source": [
         "SOURCES USED\n",
         "\n",
-        "https://www.geeksforgeeks.org/ways-to-import-csv-files-in-google-colab/#"
+        "https://www.geeksforgeeks.org/ways-to-import-csv-files-in-google-colab/#\n",
+        "\n",
+        "https://saturncloud.io/blog/how-to-read-csv-to-dataframe-in-google-colab/"
       ],
       "metadata": {
         "id": "nBvwCHbUArp3"
