--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -155,7 +155,7 @@
         "outputId": "20394ad3-f2b0-4dd4-b18e-546c052e0afa"
       },
       "id": "51MxB04v97JP",
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,6 +219,11 @@
         "**Q5.** Many important datasets contain a race variable, typically limited to a handful of values often including Black, White, Asian, Latino, and Indigenous. This question looks at data gathering efforts on this variable by the U.S. Federal government.\n",
         "\n",
         "1. How did the most recent US Census gather data on race?\n",
+        "\n",
+        "\n",
+        "> The 2020 US Census gathered data on race by letting people choose to identify as either \"one race\" or \"two or more races\". If they picked \"one race\", they were able to choose between \"White\", \"Black or African American\", \"Asian\", \"American Indian and Alaskan\", \"Native Hawaiian and Other Pacific Islander\", or \"Some Other Race\". This was followed by a question about \"ethnicity\", which asked if the respondent identified as \"Hispanic or Latino (of any race)\" or \"Not Hispanic or Latino\".\n",
+        "\n",
+        "\n",
         "2. Why do we gather these data? What role do these kinds of data play in politics and society? Why does data quality matter?\n",
         "3. Please provide a constructive criticism of how the Census was conducted: What was done well? What do you think was missing? How should future large scale surveys be adjusted to best reflect the diversity of the population? Could some of the Census' good practices be adopted more widely to gather richer and more useful data?\n",
         "4. How did the Census gather data on sex and gender? Please provide a similar constructive criticism of their practices.\n",
@@ -254,7 +259,9 @@
         "\n",
         "https://www.geeksforgeeks.org/ways-to-import-csv-files-in-google-colab/#\n",
         "\n",
-        "https://saturncloud.io/blog/how-to-read-csv-to-dataframe-in-google-colab/"
+        "https://saturncloud.io/blog/how-to-read-csv-to-dataframe-in-google-colab/\n",
+        "\n",
+        "https://www.census.gov/programs-surveys/decennial-census/decade/2020/2020-census-main.html"
       ],
       "metadata": {
         "id": "nBvwCHbUArp3"
