--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -225,10 +225,31 @@
         "\n",
         "\n",
         "2. Why do we gather these data? What role do these kinds of data play in politics and society? Why does data quality matter?\n",
+        "\n",
+        "\n",
+        "> We gather these data because, in a country like the US, race and ethnicity have historically played a very large role in shaping our society and the disparities between various communities. In politics and society, these data provide another factor in helping us understand why certain trends and outcomes might occur in society. Data quality matters because if the data is not collected well, the results of the census would not accurately reflect the true demographics of the population, which can affect everything from legislative districts to federal grants.\n",
+        "\n",
+        "\n",
         "3. Please provide a constructive criticism of how the Census was conducted: What was done well? What do you think was missing? How should future large scale surveys be adjusted to best reflect the diversity of the population? Could some of the Census' good practices be adopted more widely to gather richer and more useful data?\n",
+        "\n",
+        "\n",
+        "> Overall, the categories for race, age, gender, ethnicity, and other personal identifiers were clear and consistent across variables, helping people understand what exactly is being asked for more often. As for the race and ethnicity variables, it could be argued that the selection of options offered are too simplistic, disregarding other categories that people might identify as, such as Middle Eastern or Native South American, to give a couple of examples. In the future, they could add a blank box, and then use machine learning to consolidate people's answers to that question into even more categories that could be used on future censuses (censi)? Some of the practices used here, especially separating race and ethnicity, could be used in the future to give a full picture of other variables where one particular variable (i.e. Hispanic or Latino) doesn't really fit under another variable (i.e. race), and instead deserves its own category so people can pick both the original variable and the new variable.\n",
+        "\n",
+        "\n",
         "4. How did the Census gather data on sex and gender? Please provide a similar constructive criticism of their practices.\n",
+        "\n",
+        "\n",
+        "> The census only gathered data on sex, which is divided into \"male\" and \"female\" options. Of course, not everyone is necessarily male or female via biological sex (e.g. intersex people), so there could be an \"other\" or fill in the blank option there. Gender could also definitely be its own variable in a future census, since it is its own category apart from sex (of course, including it could cause some political issues).\n",
+        "\n",
+        "\n",
         "5. When it comes to cleaning data, what concerns do you have about protected characteristics like sex, gender, sexual identity, or race? What challenges can you imagine arising when there are missing values? What good or bad practices might people adopt, and why?\n",
-        "6. Suppose someone invented an algorithm to impute values for protected characteristics like race, gender, sex, or sexuality. What kinds of concerns would you have?"
+        "\n",
+        "\n",
+        "> There are many concerns when cleaning data relating to protected classes. Regarding missing values, it would be important to not assume someone's value based on other characteristics (as you might train a learning model to do), since this could have severe consequences if your model is flawed (which every model ultimately is). People can use data about protected classes to benefit certain classes (such as improving targeted government services, or using data to persuade the public to support programs that can improve outcomes for individual classes); but of course, people can also use this data to make certain classes look bad or even decrease services to certain classes (such as racial gerrymandering such that one class is underrepresented).\n",
+        "\n",
+        "\n",
+        "6. Suppose someone invented an algorithm to impute values for protected characteristics like race, gender, sex, or sexuality. What kinds of concerns would you have?\n",
+        "\n"
       ]
     },
     {
