--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -249,6 +249,10 @@
         "\n",
         "\n",
         "6. Suppose someone invented an algorithm to impute values for protected characteristics like race, gender, sex, or sexuality. What kinds of concerns would you have?\n",
+        "\n",
+        "> As I mentioned in the previous question, no model is perfect. Not only that, however, but it is very morally questionable, in my opinion, to assume someone's race, age, gender, or sexuality based on other characteristics (such as, presumably, income, zip code, and other factors). With sensitive variables like those relating to protected classes, it's always better to know for sure what a value is (or if you don't know, admit that you don't have the information) than to (essentially) make an educated guess and then have all your values for a particular variable \"completed\".\n",
+        "\n",
+        "\n",
         "\n"
       ]
     },
